Minor layout one

--- a/wwc/vagrant_skydocking.html
+++ b/wwc/vagrant_skydocking.html
@@ -55,7 +55,7 @@
 
 <div class="date">29.01.2014</div>
 
-<p><em>UPDATED 30.01.2014</em> - Using a <strong>route</strong> instead of <strong>linking</strong> interfaces. A bit simpler. Original article <a href="/wwc/vagrant_skydocking_link.html">here</a>.</p>
+<p><em>UPDATED 30.01.2014</em> - Using a <strong>route</strong> instead of <strong>linking</strong> interfaces. A bit simpler. Original <a href="/wwc/vagrant_skydocking_link.html">here</a>.</p>
 
 <h2>A bridge over vagrant water</h2>
 
