Updated tiny node and added html

--- a/wwc/tiny_node_containers.html
+++ b/wwc/tiny_node_containers.html
@@ -64,7 +64,7 @@
 <p>Until I found <a href="https://github.com/crcn/nexe">nexe</a>...</p>
 
 <p><img src="https://raw.github.com/jglovier/gifs/gh-pages/excited/ace-ventura-dance.gif" /><br>
-<font color="#999"><em>I can haz javascript aaaaaand binary???</em></font>  </p>
+<font color="#999"><em>I can haz javascript aaaand binary???</em></font>  </p>
 
 <h2>Building with nexe</h2>
 
@@ -95,13 +95,14 @@ ADD app /usr/bin/app
 ENTRYPOINT [&quot;app&quot;]
 </code></pre>
 
-<h2>Example</h2>
+<h2>Diff</h2>
 
 <p>I used this approach to build <a href="https://github.com/asbjornenge/skylink">skylink</a>, check out the difference!</p>
 
-<p>&nbsp; | normal | nexe
--- | -- | --
-size  | <strong>730.5 MB</strong> | <strong>132.1 MB</strong></p>
+<pre><code>      |   normal  |  nexe
+ ---------------------------
+ size |  730.5 MB | 132.1 MB
+</code></pre>
 
 <h2>Credits</h2>
 
