Credits updated for tiny node

--- a/wwc/tiny_node_containers.html
+++ b/wwc/tiny_node_containers.html
@@ -105,7 +105,8 @@ ENTRYPOINT [&quot;app&quot;]
 
 <h2>Credits</h2>
 
-<p>Gif from <a href="https://github.com/jglovier/gifs">here</a>.<br>
+<p>♥ to the <a href="https://github.com/crcn/nexe">nexe</a> folks!<br>
+Gif from <a href="https://github.com/jglovier/gifs">here</a>.<br>
 Thanks!</p>
 
             <div class="push"></div>
