Working on index page and index layout

--- a/index.html
+++ b/index.html
@@ -53,36 +53,48 @@
         <div id="content">
             
 	
+    <div class="previews">
 		
     <div id="416ab009" class="preview">
-        <span class="title">Tiny Node Containers</span><span class="date">11.03.2014</span>
-        <p>Learn how you can make compile your javascript into a binary executable and produce really small docker images.</p>
+        <div class="previewDate">11.03.2014</div>
+            <div class="previewImageBox" style="background-image:url(https://raw.github.com/jglovier/gifs/gh-pages/excited/ace-ventura-dance.gif)"></div>
+        <h3 class="title"><a href="wwc/tiny_node_containers.html">Tiny Node Containers</a></h3>
+        <p>Moby Dick ♥ compiled javascript!</p>
     </div>
 
 		
     <div id="342e195d" class="preview">
-        <span class="title">Vagrant skydocking</span><span class="date">29.01.2014</span>
-        <p></p>
+        <div class="previewDate">29.01.2014</div>
+            <div class="previewImageBox" style="background-image:url(/img/docker-whale.png)"></div>
+        <h3 class="title"><a href="wwc/vagrant_skydocking.html">Vagrant skydocking</a></h3>
+        <p>Talk easily & directly with your docker containers.</p>
     </div>
 
 		
     <div id="b6a35118" class="preview">
-        <span class="title">Out of sorts</span><span class="date">30.03.2013</span>
-        <p></p>
+        <div class="previewDate">30.03.2013</div>
+            <div class="previewImageBox" style="background-image:url(/img/out-of-sorts-preview.png)"></div>
+        <h3 class="title"><a href="wwc/out_of_sorts.html">Out of sorts</a></h3>
+        <p>My first real fight with fonts.</p>
     </div>
 
 		
     <div id="98c6d461" class="preview">
-        <span class="title">Zero Todo</span><span class="date">08.03.2013</span>
-        <p></p>
+        <div class="previewDate">08.03.2013</div>
+            <div class="previewImageBox" style="background-image:url(/img/inbox-zero.png)"></div>
+        <h3 class="title"><a href="wwc/zero_todo.html">Zero Todo</a></h3>
+        <p>Easily add todo items to your inbox.</p>
     </div>
 
 		
     <div id="68fef665" class="preview">
-        <span class="title">JSON Schema</span><span class="date">10.02.2013</span>
-        <p></p>
+        <div class="previewDate">10.02.2013</div>
+            <div class="previewImageBox" style="background-image:url(/img/json-schema.png)"></div>
+        <h3 class="title"><a href="wwc/json_schema.html">JSON Schema</a></h3>
+        <p>Validate your JSON.</p>
     </div>
 
+    </div>
 
             <div class="push"></div>
         </div>
