Removed links from article headings and fixed navigation

--- a/index.html
+++ b/index.html
@@ -57,40 +57,40 @@
 		
     <div id="416ab009" class="preview">
         <div class="previewDate">11.03.2014</div>
-            <div class="previewImageBox" style="background-image:url(https://raw.github.com/jglovier/gifs/gh-pages/excited/ace-ventura-dance.gif)"></div>
-        <h3 class="title"><a href="wwc/tiny_node_containers.html">Tiny Node Containers</a></h3>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/ace-ventura-dance.gif)" link="wwc/tiny_node_containers.html"></div>
+        <h3 class="previewLink" link="wwc/tiny_node_containers.html">Tiny Node Containers</h3>
         <p>Moby Dick ♥ compiled javascript!</p>
     </div>
 
 		
     <div id="342e195d" class="preview">
         <div class="previewDate">29.01.2014</div>
-            <div class="previewImageBox" style="background-image:url(/img/docker-whale.png)"></div>
-        <h3 class="title"><a href="wwc/vagrant_skydocking.html">Vagrant skydocking</a></h3>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/docker-whale.png)" link="wwc/vagrant_skydocking.html"></div>
+        <h3 class="previewLink" link="wwc/vagrant_skydocking.html">Vagrant skydocking</h3>
         <p>Talk easily & directly with your docker containers.</p>
     </div>
 
 		
     <div id="b6a35118" class="preview">
         <div class="previewDate">30.03.2013</div>
-            <div class="previewImageBox" style="background-image:url(/img/out-of-sorts-preview.png)"></div>
-        <h3 class="title"><a href="wwc/out_of_sorts.html">Out of sorts</a></h3>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/out-of-sorts-preview.png)" link="wwc/out_of_sorts.html"></div>
+        <h3 class="previewLink" link="wwc/out_of_sorts.html">Out of sorts</h3>
         <p>My first real fight with fonts.</p>
     </div>
 
 		
     <div id="98c6d461" class="preview">
         <div class="previewDate">08.03.2013</div>
-            <div class="previewImageBox" style="background-image:url(/img/inbox-zero.png)"></div>
-        <h3 class="title"><a href="wwc/zero_todo.html">Zero Todo</a></h3>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/inbox-zero.png)" link="wwc/zero_todo.html"></div>
+        <h3 class="previewLink" link="wwc/zero_todo.html">Zero Todo</h3>
         <p>Easily add todo items to your inbox.</p>
     </div>
 
 		
     <div id="68fef665" class="preview">
         <div class="previewDate">10.02.2013</div>
-            <div class="previewImageBox" style="background-image:url(/img/json-schema.png)"></div>
-        <h3 class="title"><a href="wwc/json_schema.html">JSON Schema</a></h3>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/json-schema.png)" link="wwc/json_schema.html"></div>
+        <h3 class="previewLink" link="wwc/json_schema.html">JSON Schema</h3>
         <p>Validate your JSON.</p>
     </div>
 
