--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="/wwc/json_schema.html">JSON Schema Validation</a></h1>
+            <h1>JSON Schema Validation</h1>
 
 <div class="date">10.02.2013</div>
 
