--- a/wwc/out_of_sorts.html
+++ b/wwc/out_of_sorts.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="/wwc/out_of_sorts.html">Out of sorts</a></h1>
+            <h1>Out of sorts</h1>
 
 <div class="date">30.03.2013</div>
 
