--- a/wwc/tiny_node_containers.html
+++ b/wwc/tiny_node_containers.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="/wwc/tiny_node_containers.html">Tiny node containers</a></h1>
+            <h1>Tiny node containers</h1>
 
 <div class="date">11.03.2014</div>
 
