--- a/wwc/zero_todo.html
+++ b/wwc/zero_todo.html
@@ -51,7 +51,7 @@
             <div class="rss"><a href="http://www.asbjornenge.com/wwc/rss.xml"><i class="icon-rss"></i></a></div>
         </div>
         <div id="content">
-            <h1><a href="/wwc/zero_todo.html">Zero Todo</a></h1>
+            <h1>Zero Todo</h1>
 
 <div class="date">08.03.2013</div>
 
