--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="previewDate">08.03.2013</div>
             <div class="previewImageBox previewLink" style="background-image:url(/img/inbox-zero.png)" link="wwc/zero_todo.html"></div>
         <h3 class="previewLink" link="wwc/zero_todo.html">Zero Todo</h3>
-        <p>Easily add todo items to your inbox.</p>
+        <p>Todo workflow for inbox zeroists.</p>
     </div>
 
 		
@@ -91,7 +91,7 @@
         <div class="previewDate">10.02.2013</div>
             <div class="previewImageBox previewLink" style="background-image:url(/img/json-schema.png)" link="wwc/json_schema.html"></div>
         <h3 class="previewLink" link="wwc/json_schema.html">JSON Schema</h3>
-        <p>Validate your JSON.</p>
+        <p>Validate that JSON.</p>
     </div>
 
     </div>
