--- a/wwc/dock_in_the_clouds.html
+++ b/wwc/dock_in_the_clouds.html
@@ -77,7 +77,7 @@
 
 <p>Pick a cloud, any cloud.   </p>
 
-<p>We&#39;ll stick with an Ubuntu 12.04 LTS on <a href="http://aws.amazon.com/">AWS</a> EC2, but feel free to choose <a href="https://www.digitalocean.com/">digitalocean</a> or any other supplier and/or linux distribution. Create your VPS (follow provider instructions) and log in.</p>
+<p>We&#39;ll stick with an <strong>Ubuntu 12.04 LTS</strong> on <a href="http://aws.amazon.com/">AWS</a> EC2, but feel free to choose <a href="https://www.digitalocean.com/">digitalocean</a> or any other supplier and/or linux distribution. Create your VPS (follow provider instructions) and log in.</p>
 
 <pre><code>$ ssh &lt;cloud_server_ip&gt;
 </code></pre>
@@ -173,7 +173,7 @@ PING 10.0.0.2 (10.0.0.2): 56 data bytes
 CONTAINER ID        IMAGE                           COMMAND                CREATED             STATUS              PORTS
 </code></pre>
 
-<p>HUZZA!</p>
+<p><img src="http://gifs.joelglovier.com/ohhh/ohhh-minion.gif" alt="OHHHH"></p>
 
 <h2>Addtional setup &amp; security</h2>
 
@@ -190,7 +190,7 @@ CONTAINER ID        IMAGE                           COMMAND                CREAT
        iptables -t nat -A POSTROUTING --source 10.0.0.2 -j SNAT --to-source 10.0.0.10
 </code></pre>
 
-<p>Add a command to <code>authorized_keys</code> (first thing in the file) to bring up the interface on connection.</p>
+<p>Add a command to root&#39;s <code>authorized_keys</code> (first thing in the file) to bring up the interface on connection.</p>
 
 <pre><code>$ sudo vi /root/.ssh/authorized_keys
     tunnel=&quot;0&quot;,command=&quot;/sbin/ifdown tun0;/sbin/ifup tun0&quot; ssh-rsa ....
@@ -207,18 +207,24 @@ $ sudo service ssh restart
 
 <h2>DNS</h2>
 
-<p>If you want simple dns based service discovery for you containers over you new cloud bridge, apply the same tools and techniques discussed in my previous article <a href="/wwc/vagrant_skydocking.html">Vagrant Skydocking</a> to this clound bridge. You will be pinging <code>redis.staging.yourapp</code> in no time.</p>
+<p>If you want simple dns based service discovery for you containers over you new cloud bridge, apply the same tools and techniques discussed in my previous article <a href="/wwc/vagrant_skydocking.html">Vagrant Skydocking</a> to this cloud bridge. You will be pinging <code>redis.staging.yourapp</code> in no time.</p>
 
 <h2>Closing thoughts</h2>
 
 <p>I have been applying this technique for connecting to different VPCs I manage on amazon. Once scripted it&#39;s really nice being able to connect to a specific environment with one command and be hands on the docker host(s) and the containers in that environment.</p>
 
-<p>Originally I had been hoping to also use a VPC for development purposes. Unfortunately the latency from my location to the datacenter gets annoying when trying to get efficient feedback loops (especially establishing db connections). This is however not a fault of this approach, but the distance from me to the datacenter. Your milage may vary. Setting up a development host closer to home using the same approach did the trick.</p>
+<p>Originally I had been hoping to also use a VPC for development purposes. Unfortunately the latency from my location to the datacenter gets annoying when trying to get efficient feedback loops. This is however not a fault of this approach, but the distance from me to the datacenter. Your milage may vary. Setting up a development host closer to home did the trick.</p>
+
+<p>Time to dance!</p>
+
+<p><img src="http://gifs.joelglovier.com/epic/calvin-hobbes-dance.gif" alt="DANCE"></p>
 
 <h2>Credits</h2>
 
-<p>http://www.debian-administration.org/article/539/Setting<em>up</em>a<em>Layer</em>3<em>tunneling</em>VPN<em>with</em>using_OpenSSH<br>
-http://wouter.horre.be/doc/vpn-over-ssh</p>
+<p>♥ goes out to ssh.<br>
+And all the amazing unix hackers out there!<br>
+Including the authors of <a href="http://www.debian-administration.org/article/539/Setting_up_a_Layer_3_tunneling_VPN_with_using_OpenSSH">this</a> and <a href="http://wouter.horre.be/doc/vpn-over-ssh">that</a>.<br>
+Thank you internet of folks!</p>
 
 <p>enjoy.</p>
 
