Added some gifs and fixed a few typos

--- a/wwc/dock_in_the_clouds.html
+++ b/wwc/dock_in_the_clouds.html
@@ -167,7 +167,7 @@ PING 10.0.0.2 (10.0.0.2): 56 data bytes
 <pre><code>(client) $ export DOCKER_HOST=tcp://172.17.42.1:4243
 </code></pre>
 
-<p>Et voila:</p>
+<p>Et voilà:</p>
 
 <pre><code>(client) $ docker ps
 CONTAINER ID        IMAGE                           COMMAND                CREATED             STATUS              PORTS
