--- a/wwc/dock_in_the_clouds.html
+++ b/wwc/dock_in_the_clouds.html
@@ -224,6 +224,7 @@ $ sudo service ssh restart
 <p>♥ goes out to ssh.<br>
 And all the amazing unix hackers out there!<br>
 Including the authors of <a href="http://www.debian-administration.org/article/539/Setting_up_a_Layer_3_tunneling_VPN_with_using_OpenSSH">this</a> and <a href="http://wouter.horre.be/doc/vpn-over-ssh">that</a>.<br>
+Gifs from <a href="http://gifs.joelglovier.com/">here</a>.<br>
 Thank you internet of folks!</p>
 
 <p>enjoy.</p>
