Releasing Dock in the Clouds

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 	
     <div class="previews">
 		
+    <div id="8bb8ef3f" class="preview">
+        <div class="previewDate">10.06.2014</div>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/dock-in-the-clouds.png)" link="wwc/dock_in_the_clouds.html"></div>
+        <h3 class="previewLink" link="wwc/dock_in_the_clouds.html">Dock in the clouds</h3>
+        <p>Move your docker host to the clouds & setup a SSH based "VPN".</p>
+    </div>
+
+		
     <div id="416ab009" class="preview">
         <div class="previewDate">11.03.2014</div>
             <div class="previewImageBox previewLink" style="background-image:url(/img/ace-ventura-dance.gif)" link="wwc/tiny_node_containers.html"></div>
@@ -65,7 +73,7 @@
 		
     <div id="342e195d" class="preview">
         <div class="previewDate">29.01.2014</div>
-            <div class="previewImageBox previewLink" style="background-image:url(/img/docker-whale.png)" link="wwc/vagrant_skydocking.html"></div>
+            <div class="previewImageBox previewLink" style="background-image:url(/img/vagrant-skydocking.png)" link="wwc/vagrant_skydocking.html"></div>
         <h3 class="previewLink" link="wwc/vagrant_skydocking.html">Vagrant skydocking</h3>
         <p>Talk easily & directly with your docker containers.</p>
     </div>
