--- a/wwc/dock_in_the_clouds.html
+++ b/wwc/dock_in_the_clouds.html
@@ -53,6 +53,8 @@
         <div id="content">
             <h1>Dock in the clouds</h1>
 
+<div class="date">10.06.2014</div>
+
 <p>Tired of having virtualbox and a thousand docker containers dragging your macbook air down in the mud? Put your docker host in the clouds!</p>
 
 <p>In this post we will create a docker host running in the cloud and hook that up to our local development environment using a SSH based &quot;VPN&quot;.</p>
@@ -226,8 +228,6 @@ And all the amazing unix hackers out there!<br>
 Including the authors of <a href="http://www.debian-administration.org/article/539/Setting_up_a_Layer_3_tunneling_VPN_with_using_OpenSSH">this</a> and <a href="http://wouter.horre.be/doc/vpn-over-ssh">that</a>.<br>
 Gifs from <a href="http://gifs.joelglovier.com/">here</a>.<br>
 Thank you internet of folks!</p>
-
-<p>enjoy.</p>
 
             <div class="push"></div>
         </div>
